fix: modal z-index

--- a/app/(dashboard)/project/[id]/page.module.scss
+++ b/app/(dashboard)/project/[id]/page.module.scss
@@ -67,5 +67,5 @@
 .taskList {
   height: 80%;
   overflow: scroll;
-  position: relative;
+  // position: relative;
 }
