--- a/components/TaskTableItem.module.scss
+++ b/components/TaskTableItem.module.scss
@@ -7,6 +7,7 @@
   border-spacing: 0;
   thead {
     position: sticky;
+    position: --webkit-sticky;
     z-index: 1;
     top: 0;
     th {
@@ -98,6 +99,6 @@
   }
 }
 .modal {
-  position: absolute;
+  position: fixed;
   z-index: 2;
 }
