--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -87,6 +87,7 @@ body {
   width: 100%;
   height: 80%;
   @media (min-width: 590px) {
+    width: calc(100% - 6.5rem);
     height: 100%;
     padding-left: 0.5rem;
   }
